Modified the code for the HTML file

--- a/index.html
+++ b/index.html
@@ -33,18 +33,14 @@
   </h2>
 
   <p>
-    Software Engineer focused on performance, clean architecture, and premium user experiences.
+    Software Engineering student focused on performance, clean architecture, and premium user experiences.
   </p>
 
   <div class="hero-buttons">
-    <a href="#projects" class="button">View My Work</a>
-
     <!-- Direct Download -->
     <a href="Arnob_Chowdhury_CV.pdf" download="Arnob_Chowdhury_CV.pdf" class="button">
       Download CV
     </a>
-
-    <a href="#contact" class="button">Contact Me</a>
   </div>
 </section>
 
